[gd_scene load_steps=11 format=4 uid="uid://dcy74u4p7xj5t"]

[ext_resource type="PackedScene" uid="uid://c3lnqei4itfpx" path="res://Prefab/TowerDefense/Character/TowerDefensePlant.tscn" id="1"]
[ext_resource type="Script" uid="uid://bgbplq1l71q3h" path="res://Asset/Anime/Character/Plant/Chapter2/PeaLilyPad/Scene/TowerDefensePlantPeaLilyPad.gd" id="2"]
[ext_resource type="Resource" uid="uid://cdqqr5opgx5xp" path="res://Asset/Anime/Character/Plant/Chapter2/PeaLilyPad/Config/TowerDefensePlantPeaLilyPad.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://cuewregk73bwm" path="res://Asset/Anime/Character/Plant/Chapter2/PeaLilyPad/PeaLilyPad.tscn" id="4"]
[ext_resource type="Script" uid="uid://b6lojhfkgvhsw" path="res://addons/AdobeAnimateEditor/Node/AdobeAnimateSlot.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://b5htxrgm8twcr" path="res://Script/Component/TowerDefense/Character/FireComponent/FireComponent.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://d1l3f28mblu32" path="res://Script/Component/TowerDefense/Character/SlotComponent/SlotComponent.tscn" id="7"]
[ext_resource type="Script" uid="uid://domu0k4tfig2c" path="res://addons/godot_state_charts/atomic_state.gd" id="8"]
[ext_resource type="Script" uid="uid://bnuagwct5sv5y" path="res://addons/godot_state_charts/transition.gd" id="9"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mig1w"]
b = Vector2(2000, 0)

[node name="TowerDefensePlantPeaLilyPad" node_paths=PackedStringArray("sprite") instance=ExtResource("1")]
z_index = -13
script = ExtResource("2")
fireInterval = 3.0
fireNum = 1
config = ExtResource("3")
sprite = NodePath("SpriteGroup/TransformPoint/PeaLilyPad")
Custom = []
itemLayer = 2

[node name="TransformPoint" parent="SpriteGroup" index="1"]
position = Vector2(0, 30)

[node name="PeaLilyPad" parent="SpriteGroup/TransformPoint" index="0" node_paths=PackedStringArray("layerSlot") instance=ExtResource("4")]
position = Vector2(0, -30)
offset = Vector2(-40, -21.9589)
layerSlot = [NodePath("PotSlot"), null, null, NodePath("MouseSlot"), null, null]

[node name="PotSlot" type="Node2D" parent="SpriteGroup/TransformPoint/PeaLilyPad" index="0"]
position = Vector2(-40.35, -16.4589)
script = ExtResource("5")
followSlotId = 1
useScale = false
metadata/_custom_type_script = "uid://b6lojhfkgvhsw"

[node name="Marker2D" type="Marker2D" parent="SpriteGroup/TransformPoint/PeaLilyPad/PotSlot" index="0"]
position = Vector2(41.35, 10.1448)

[node name="MouseSlot" type="Node2D" parent="SpriteGroup/TransformPoint/PeaLilyPad" index="1"]
position = Vector2(33.544, 6.08105)
scale = Vector2(0.530984, 0.506387)
script = ExtResource("5")
followSlotId = 4
useRotate = false
useSkew = false
metadata/_custom_type_script = "uid://b6lojhfkgvhsw"

[node name="FireMarker" type="Marker2D" parent="SpriteGroup/TransformPoint/PeaLilyPad/MouseSlot" index="0"]
position = Vector2(23.17, 22.8264)

[node name="ShadowSprite" parent="." index="3"]
z_index = -10
position = Vector2(0, 24)
scale = Vector2(0.821918, 0.77551)
texture = null

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 0)

[node name="FireComponent" parent="." index="7" node_paths=PackedStringArray("firePosMarker", "checkArea") instance=ExtResource("6")]
unique_name_in_owner = true
firePosMarker = [NodePath("../SpriteGroup/TransformPoint/PeaLilyPad/MouseSlot/FireMarker")]
checkArea = NodePath("Area2D")
fireInterval = 1.5

[node name="Area2D" type="Area2D" parent="FireComponent" index="0"]
collision_layer = 0

[node name="CheckShape" type="CollisionShape2D" parent="FireComponent/Area2D" index="0"]
unique_name_in_owner = true
shape = SubResource("SegmentShape2D_mig1w")

[node name="SlotComponent" parent="." index="8" node_paths=PackedStringArray("posMark") instance=ExtResource("7")]
posMark = NodePath("../SpriteGroup/TransformPoint/PeaLilyPad/PotSlot/Marker2D")
heightFollow = true
hideShadow = false

[node name="ShowHealthComponent" parent="." index="9"]
position = Vector2(0, 30)

[node name="Attack" type="Node" parent="StateChart/CompoundState" index="2"]
script = ExtResource("8")

[node name="ToAttack" type="Node" parent="StateChart/CompoundState" index="6"]
script = ExtResource("9")
to = NodePath("../Attack")
event = &"ToAttack"
delay_in_seconds = "0.0"

[connection signal="state_entered" from="StateChart/CompoundState/Attack" to="." method="AttackEntered"]
[connection signal="state_exited" from="StateChart/CompoundState/Attack" to="." method="AttackExited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attack" to="." method="AttackProcessing"]
